<resources>
    <string name="app_name">Toppr</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ctc">INR 8L-20L</string>
    <string name="cardview_image_description">Image View</string>
    <string name="experience">Experience: </string>
    <string name="ctc_string">CTC: INR 8L-20L</string>
    <string name="share_menu_option">Share</string>
    <string name="settings">Settings</string>
    <string name="favoriteimagebutton">FavoriteImageButton</string>
    <string name="sort_by">Preferences</string>
    <string name="settings_key">settingsKey</string>
    <string name="all">all</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="go">GO</string>
    <string name="favorite">Favorites</string>
    <string name="demographics">Demographics</string>
    <string name="bot_wars">Bot wars</string>
    <string name="hackathons">Hackathons</string>
    <string name="hiring_challenges">Hiring Challenges</string>
</resources>
